--- a/latihan1.html
+++ b/latihan1.html
@@ -10,7 +10,7 @@
  <h1>web profil</h1> 
  <img src="img/foto.jpg" alt="Foto"
  width ="250"> 
- <h2>adittia oktavianis</h2>  
+ <h2>Rizki praditya</h2>  
  <p>mahasiswa</p>
  <hr>
  <h3>Tentang saya</h3>
